Fix annotations of g_compute_hmac_for_data

https://bugzilla.gnome.org/show_bug.cgi?id=765338